my tictactoe game

--- a/TicTacToe/src/App.css
+++ b/TicTacToe/src/App.css
@@ -1,4 +1,4 @@
-.game {
+/* .game {
   max-width: 300px;
   margin: 0 auto;
   text-align: center;
@@ -32,4 +32,44 @@
 
 .cell:hover {
   background-color: aliceblue;
+} */
+
+/* My Code for Css */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: aqua;
+}
+.board {
+  width: 500px;
+  height: 600px;
+  background-color: #fff;
+  margin: 30% auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  align-items: center;
+  justify-items: center;
+}
+
+.box {
+  width: 90%;
+  height: 90%;
+  background-color: aqua;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 6rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.xbox {
+  color: red;
+}
+
+.obox {
+  color: blue;
 }
