--- a/TicTacToe/src/App.css
+++ b/TicTacToe/src/App.css
@@ -40,18 +40,18 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: aqua;
 }
 .board {
   width: 500px;
   height: 600px;
   background-color: #fff;
-  margin: 30% auto;
+  margin: 5% auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
   align-items: center;
   justify-items: center;
+  border-radius: 2%;
 }
 
 .box {
@@ -64,6 +64,57 @@
   font-size: 6rem;
   font-weight: bold;
   cursor: pointer;
+  border-radius: 2%;
+}
+
+.scores {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2% auto;
+  width: 60%;
+}
+
+.score-board {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 500px;
+  background-color: #aca7a7;
+  padding: 42px 30px;
+  color: #fff;
+  border-radius: 2%;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.underline {
+  text-decoration: underline red 5px;
+  text-underline-offset: 10px;
+}
+
+.underlineblue {
+  text-decoration: underline blue 5px;
+  text-underline-offset: 10px;
+}
+
+.btn-container {
+  width: 100%;
+  grid-column: 1/4;
+  padding: 20px;
+  margin-top: 5px;
+  display: flex;
+  justify-content: center;
+}
+
+.button {
+  padding: 24px 80px;
+  border: none;
+  border-radius: 8px;
+  font-size: 2rem;
+  font-weight: bold;
+  letter-spacing: 2px;
+  background-color: aquamarine;
 }
 
 .xbox {
