--- a/TicTacToe/src/App.css
+++ b/TicTacToe/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
+
 /* .game {
   max-width: 300px;
   margin: 0 auto;
@@ -40,11 +42,15 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Comic Neue", cursive;
+  font-weight: 400;
+}
+body {
+  background-color: #cdb4db;
 }
 .board {
   width: 500px;
   height: 600px;
-  background-color: #fff;
   margin: 5% auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -57,14 +63,15 @@
 .box {
   width: 90%;
   height: 90%;
-  background-color: aqua;
+  background-color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 6rem;
+  font-size: 8rem;
   font-weight: bold;
   cursor: pointer;
   border-radius: 2%;
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
 
 .scores {
@@ -80,21 +87,23 @@
   justify-content: space-evenly;
   align-items: center;
   width: 500px;
-  background-color: #aca7a7;
+  background-color: #f1faee;
   padding: 42px 30px;
-  color: #fff;
+  color: #1a1919;
   border-radius: 2%;
   font-size: 2rem;
   font-weight: bold;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
 .underline {
-  text-decoration: underline red 5px;
+  text-decoration: underline #c1121f 5px;
   text-underline-offset: 10px;
 }
 
 .underlineblue {
-  text-decoration: underline blue 5px;
+  text-decoration: underline #219ebc 5px;
   text-underline-offset: 10px;
 }
 
@@ -114,13 +123,14 @@
   font-size: 2rem;
   font-weight: bold;
   letter-spacing: 2px;
-  background-color: aquamarine;
+  background-color: #06d6a0;
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
 
 .xbox {
-  color: red;
+  color: #c1121f;
 }
 
 .obox {
-  color: blue;
+  color: #219ebc;
 }
