--- a/DataManagement/style.css
+++ b/DataManagement/style.css
@@ -82,3 +82,78 @@ header > button:hover {
 .selected {
   background-color: #c0e5a1aa;
 }
+
+.employees-single--heading {
+  text-align: center;
+  font-size: 25px;
+  text-transform: uppercase;
+  padding: 5px;
+}
+
+.employee-names-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.employee-names-info > img {
+  width: 250px;
+  height: 250px;
+  object-fit: contain;
+  border-radius: 50%;
+}
+
+.addEmployee {
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--modal-bg);
+}
+
+.create-employee {
+  width: 400px;
+  background-color: #3b3a3a;
+  box-shadow: 0 0 50px rgb(226, 222, 222);
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.create-employee > div {
+  display: flex;
+  justify-content: space-between;
+  gap: 15px;
+}
+
+.create-employee input {
+  padding: 5px 10px;
+  border-radius: 5px;
+  border: 1px solid rgb(236, 236, 236);
+}
+
+.create-employee input::-webkit-outer-spin-button,
+.create-employee input ::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.addEmployee-submit {
+  padding: 10px;
+  border-radius: 5px;
+  border: none !important;
+  background-color: #c0e5a1aa;
+  cursor: pointer;
+}
+
+.addEmployee-submit:hover {
+  background-color: #598536aa;
+}
